# Brcd-Printer

./: .gitignore  .yamllint.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  asgi.py  boot.sh  docker-compose.yml  pyproject.toml
Brcd-printer/: main.py
Brcd-printer/static/css/: index.css
Brcd-printer/templates/: index.html
brcdprinter/: __init__.py  routes.py  validator.py
brcdprinter/templates/: index.html
printer/: __init__.py  barcodes.py  db.py  exception.py  job.py  log.py  main.py  odoo.py  parsers.py  printers.py  routes.py  utils.py  validator.py
printer/static/css/: index.css
printer/static/js/: index.js
printer/templates/: index.html
printer_configs/: printer_config.yaml  printer_config.yaml.example
