[tool.poetry]
name = "printer"
version = "0.2.0"
description = ""
authors = ["rviry <rom88.viry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.12.1"
ERPpeek = "^1.7.1"
brother-ql = "^0.9.4"
python-barcode = "^0.15.1"
sanic-ext = "^23.12.0"
jinja2 = "^3.1.3"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"
ruff = "^0.2.2"
safety = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
